themes/wipdev/assets/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@300;400;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Noto Serif', sans-serif;
    color: #223;
    padding: 100px 150px;
}

aside {
    background: #fff;
    position: fixed;
    right: 150px;
    top: 100px;
    text-align: end;
}

aside ul {
    list-style-type: none;
}

code, pre {
    font-family: monospace;
    margin-bottom: 1rem;
}

code {
    padding: 0 5px;
    background: #ddd;
}

pre code {
    padding: 0;
    line-height: 1.6rem;
    font-size: 1.1rem;
    border-radius: 10px;
}

#logo code {
    background: white;
    color: black;
    padding: 0;
    font-size: 1.7rem;
    line-height: 2.5rem;
}

main {
    width: min(1000px, calc(100vw - 500px));
    padding-right: 20px;
}

img {
    width: 100%;
    margin: 0 auto;
    border-radius: 10px;
}

h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
}

.post-title {
    line-height: 3.25rem;
}

.post-title small {
    font-weight: 400;
    font-size: 1.5rem;
}

h2 {
    font-size: 2.2rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

h3 {
    font-size: 1.5rem;
    margin-top: 2rem;
    margin-bottom: 1rem;
}

p, ul, ol {
    font-size: 1.3rem;
    line-height: 2rem;
    margin-bottom: 1rem;
}

ul {
    list-style-type: circle;
}

a {
    text-decoration: none;
    color: #1111b9;
}

a:hover {
    text-decoration: underline;
}

hr {
    opacity: 20%;
    margin: 30px auto;
}

blockquote {
    border-left: 5px solid #ddd;
    padding-left: 1.5rem;
    font-style: italic;
}

blockquote * {
    color: #333;
    line-height: 170%;
}

.listing-title {
    font-size: 1.5rem;
    margin: 10px 0;
    font-weight: 600;
    display: flex;
    justify-content: space-between;
}

.listing-title small {
    font-weight: 400;
    font-size: 1.1rem;
}

@media (max-width: 1000px) {
    body {
        padding: 125px 25px;
    }

    main {
        width: 100%;
    }

    aside {
        height: 100px;
        width: 100%;
        padding: 0 10px;
        left: 0;
        top: 0;
    }

    #logo {
        margin-bottom: 0;
        text-align: center;
        padding-top: 15px;
    }

    #logo code {
        font-size: 1.2rem;
        margin-bottom: 0;
    }

    aside ul {
        font-size: 1.2rem;
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 25px;
        padding: 0 20px;
    }

    p, ul, ol {
        font-size: xx-large;
        line-height: 3rem;
    }
}

